@@ -1,1 +1,21 @@
 
+### Profit Trailer Cheat Sheet
+
+
+#### SSH into your sever
+
+Open the terminal and type:
+
+`ssh root@138.197.200.35`
+
+
+
+
+Go into your folder:
+
+`cd /home/ProfitTrailer_Bot`
+
+
+Then Run
+
+`java -jar ProfitTrailer.jar -XX:+UseConcMarkSweepGC -Xmx2m -Xms256m`
